fix(generatetoken): fix some minor bug
